--- a/index.html
+++ b/index.html
@@ -106,55 +106,83 @@ https://www.tooplate.com/view/2115-marvel
 <section class="project py-5" id="project">
   <div class="container">
     <div class="row">
-      <div class="col-lg-11 text-center mx-auto col-12">
+      <div class="col-lg-8 mx-auto text-center">
+        <h2>Projects I've Built & Deployed</h2>
+      </div>
+    </div>
 
-        <div class="col-lg-8 mx-auto">
-          <h2>Projects I've Built & Deployed</h2>
-        </div>
+    <div class="row mt-4">
 
-        <div class="owl-carousel owl-theme">
-
-          <!-- Project 1: Java Login Page -->
-          <div class="item">
-            <div class="project-info text-left">
-              <h5 class="mt-3">Vprofile Login Page</h5>
-              <p>
-                Engineered and deployed a scalable Java-based login application using AWS services by deploying services on EC2 instances running Tomcat, RabbitMQ, Memcached, and MySQL, configuring an Elastic Load Balancer (ELB) with NGINX for high availability, and implementing Auto Scaling Groups (ASG) to manage dynamic workloads
-              </p>
-              <p><strong>Tech Stack:</strong> AWS Services, ELB, ASG, MySQL</p>
-              <a href="https://github.com/rahi-32/vprofile-login.git" target="_blank">🔗 GitHub Repository</a>
-            </div>
-          </div>
-
-          <!-- Project 2: Library Management System -->
-          <div class="item">
-            <div class="project-info text-left">
-              <h5 class="mt-3">Library Management System</h5>
-              <p>
-                A full-featured desktop-based library management system to manage book issuance, returns, and member records. Includes admin and user views.
-              </p>
-              <p><strong>Tech Stack:</strong> Java, Swing, JDBC, MySQL</p>
-              <a href="https://github.com/yourusername/library-management-system" target="_blank">🔗 GitHub Repository</a>
-            </div>
-          </div>
-
-          <!-- Project 3: Tic Tac Toe Game -->
-          <div class="item">
-            <div class="project-info text-left">
-              <h5 class="mt-3">Tic Tac Toe Game</h5>
-              <p>
-                A fun and interactive two-player Tic Tac Toe game built with Java GUI. It tracks player turns and highlights the winning combinations dynamically.
-              </p>
-              <p><strong>Tech Stack:</strong> Java, AWT/Swing</p>
-              <a href="https://github.com/yourusername/tic-tac-toe-java" target="_blank">🔗 GitHub Repository</a>
-            </div>
-          </div>
-
+      <!-- Project 1 -->
+      <div class="col-md-4 mb-4">
+        <div class="project-info border rounded h-100 shadow-sm p-3">
+          <img src="images/project/project-image01.png" class="img-fluid mb-3 rounded" alt="Java Login Project">
+          <h5>Vprofile Login Page</h5>
+          <p>
+            Engineered and deployed a scalable Java-based login application using AWS services and EC2 instances. Configured ELB with NGINX for high availability and ASG for workload management.
+          </p>
+          <p><strong>Tech Stack:</strong> AWS, EC2, ELB, ASG, MySQL</p>
+          <a href="https://github.com/rahi-32/vprofile-login.git" target="_blank">🔗 GitHub Repository</a>
         </div>
       </div>
+
+      <!-- Project 2 -->
+      <div class="col-md-4 mb-4">
+        <div class="project-info border rounded h-100 shadow-sm p-3">
+          <img src="images/project/project-image02.png" class="img-fluid mb-3 rounded" alt="Library Management System">
+          <h5>Library Management System</h5>
+          <p>
+            A desktop-based Java application to manage book issuance, returns, and member records. Includes user and admin login modules.
+          </p>
+          <p><strong>Tech Stack:</strong> Java, Swing, JDBC, MySQL</p>
+          <a href="https://github.com/yourusername/library-management-system" target="_blank">🔗 GitHub Repository</a>
+        </div>
+      </div>
+
+      <!-- Project 3 -->
+      <div class="col-md-4 mb-4">
+        <div class="project-info border rounded h-100 shadow-sm p-3">
+          <img src="images/project/project-image03.png" class="img-fluid mb-3 rounded" alt="Tic Tac Toe Game">
+          <h5>Tic Tac Toe Game</h5>
+          <p>
+            A fun two-player GUI game in Java that highlights winning combinations and tracks player turns interactively.
+          </p>
+          <p><strong>Tech Stack:</strong> Java, AWT/Swing</p>
+          <a href="https://github.com/yourusername/tic-tac-toe-java" target="_blank">🔗 GitHub Repository</a>
+        </div>
+      </div>
+
+ <!-- Project 2 -->
+      <div class="col-md-4 mb-4">
+        <div class="project-info border rounded h-100 shadow-sm p-3">
+          <img src="images/project/project-image02.png" class="img-fluid mb-3 rounded" alt="Library Management System">
+          <h5>Library Management System</h5>
+          <p>
+            A desktop-based Java application to manage book issuance, returns, and member records. Includes user and admin login modules.
+          </p>
+          <p><strong>Tech Stack:</strong> Java, Swing, JDBC, MySQL</p>
+          <a href="https://github.com/yourusername/library-management-system" target="_blank">🔗 GitHub Repository</a>
+        </div>
+      </div>
+
+      <!-- Project 3 -->
+      <div class="col-md-4 mb-4">
+        <div class="project-info border rounded h-100 shadow-sm p-3">
+          <img src="images/project/project-image03.png" class="img-fluid mb-3 rounded" alt="Tic Tac Toe Game">
+          <h5>Tic Tac Toe Game</h5>
+          <p>
+            A fun two-player GUI game in Java that highlights winning combinations and tracks player turns interactively.
+          </p>
+          <p><strong>Tech Stack:</strong> Java, AWT/Swing</p>
+          <a href="https://github.com/yourusername/tic-tac-toe-java" target="_blank">🔗 GitHub Repository</a>
+        </div>
+      </div>
+
+
     </div>
   </div>
 </section>
+
 
 
     <!-- FEATURES -->
@@ -255,7 +283,7 @@ https://www.tooplate.com/view/2115-marvel
       <div class="container">
         <div class="row">
           
-          <div class="col-lg-5 mr-lg-5 col-12">
+          <!-- <div class="col-lg-5 mr-lg-5 col-12">
             <div class="google-map w-100">
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12088.558402180099!2d-73.99373482142036!3d40.75895421922642!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25855b8fb3083%3A0xa0f9aef176042a5c!2sTheater+District%2C+New+York%2C+NY%2C+USA!5e0!3m2!1sen!2smm!4v1549875377188" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
@@ -273,7 +301,7 @@ https://www.tooplate.com/view/2115-marvel
                      <li><a href="#" class="uil uil-youtube" data-toggle="tooltip" data-placement="left" title="Youtube"></a></li>
                 </ul>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-6 col-12">
             <div class="contact-form">
@@ -327,6 +355,32 @@ https://www.tooplate.com/view/2115-marvel
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/smoothscroll.js"></script>
     <script src="js/custom.js"></script>
+
+
+    <!-- EmailJS SDK -->
+<script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+<script type="text/javascript">
+  (function() {
+    emailjs.init("MAoffGbrWiXqiivTy"); // replace with your EmailJS public key
+  })();
+</script>
+
+<!-- EmailJS Form Handling -->
+<script>
+  document.getElementById('contact-form').addEventListener('submit', function(e) {
+    e.preventDefault();
+
+    emailjs.sendForm('service_gvjpo8g', 'template_dmc3eq7', this)
+      .then(function(response) {
+        alert("Message sent successfully!");
+        document.getElementById('contact-form').reset();
+      }, function(error) {
+        alert("Failed to send message. Please try again.");
+        console.log(error);
+      });
+  });
+</script>
+
 
   </body>
 </html>
