--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ https://www.tooplate.com/view/2115-marvel
             <div class="contact-form">
               <h2 class="mb-4">Interested to work together? Let's talk</h2>
 
-              <form action="" method="get">
+              <form id="contact-form">
                 <div class="row">
                   <div class="col-lg-6 col-12">
                     <input type="text" class="form-control" name="name" placeholder="Your Name" id="name">
@@ -357,29 +357,26 @@ https://www.tooplate.com/view/2115-marvel
     <script src="js/custom.js"></script>
 
 
-    <!-- EmailJS SDK -->
-<script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
-<script type="text/javascript">
-  (function() {
-    emailjs.init("MAoffGbrWiXqiivTy"); // replace with your EmailJS public key
-  })();
-</script>
-
-<!-- EmailJS Form Handling -->
+<script src="https://cdn.emailjs.com/dist/email.min.js"></script>
 <script>
+  (function() {
+    emailjs.init("MAoffGbrWiXqiivTy"); // your actual public key
+  })();
+
   document.getElementById('contact-form').addEventListener('submit', function(e) {
     e.preventDefault();
 
     emailjs.sendForm('service_gvjpo8g', 'template_dmc3eq7', this)
-      .then(function(response) {
+      .then(() => {
         alert("Message sent successfully!");
-        document.getElementById('contact-form').reset();
-      }, function(error) {
-        alert("Failed to send message. Please try again.");
-        console.log(error);
+        this.reset();
+      }, (error) => {
+        alert("Failed to send message.");
+        console.error(error);
       });
   });
 </script>
+
 
 
   </body>
