--- a/index.html
+++ b/index.html
@@ -310,11 +310,11 @@ https://www.tooplate.com/view/2115-marvel
               <form id="contact-form">
                 <div class="row">
                   <div class="col-lg-6 col-12">
-                    <input type="text" class="form-control" name="name" placeholder="Your Name" id="name">
+                    <input type="text" class="form-control" name="user_name" placeholder="Your Name" id="name">
                   </div>
 
                   <div class="col-lg-6 col-12">
-                    <input type="email" class="form-control" name="email" placeholder="Email" id="email">
+                    <input type="email" class="form-control" name="user_email" placeholder="Email" id="email">
                   </div>
 
                   <div class="col-12">
