--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ https://www.tooplate.com/view/2115-marvel
                             <span class="mr-2">Hi, I'm</span>
                                 <div class="animated-info">
                                     <span class="animated-item">Danish Ahmad</span>
-                                    <span class="animated-item">Cloud Enthusiast</span>
+                                    <span class="animated-item">DevOps Engineer</span>
                                     <span class="animated-item">AWS Certified</span>
                                 </div>
                         </h1>
@@ -94,7 +94,7 @@ https://www.tooplate.com/view/2115-marvel
 
                 <div class="col-lg-5 col-md-12 col-12">
                     <div class="about-image svg">
-                        <img src="images/undraw/undraw_software_engineer_lvl5.svg" class="img-fluid" alt="svg image">
+                        <img src="images/undraw/Generated Image September 03, 2025 - 12_10PM.jpeg" class="img-fluid" alt="svg image">
                     </div>
                 </div>
 
