Add Certificates section and styles (certificate cards + responsive)

--- a/index.html
+++ b/index.html
@@ -99,6 +99,51 @@ https://www.tooplate.com/view/2115-marvel
     </section>
 
  <!-- PROJECTS -->
+    <!-- CERTIFICATES -->
+    <section class="certificates py-5" id="certificates">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto text-center mb-4">
+            <h2>Certifications</h2>
+            <p class="mb-0">Click any certificate to view the original credential (opens in a new tab).</p>
+          </div>
+        </div>
+
+        <div class="row mt-4">
+          <!-- Certificate 1 -->
+          <div class="col-sm-6 col-md-4 mb-4">
+            <div class="certificate-card text-center p-3 h-100">
+              <a href="https://example.com/certificate1" target="_blank" rel="noopener noreferrer">
+                <img src="images/certificates/cert1.png" alt="Certificate 1" class="img-fluid mb-3 certificate-img">
+                <h5 class="mb-0">AWS Certified Solutions Architect</h5>
+              </a>
+            </div>
+          </div>
+
+          <!-- Certificate 2 -->
+          <div class="col-sm-6 col-md-4 mb-4">
+            <div class="certificate-card text-center p-3 h-100">
+              <a href="https://example.com/certificate2" target="_blank" rel="noopener noreferrer">
+                <img src="images/certificates/cert2.png" alt="Certificate 2" class="img-fluid mb-3 certificate-img">
+                <h5 class="mb-0">Docker Certified Associate</h5>
+              </a>
+            </div>
+          </div>
+
+          <!-- Certificate 3 -->
+          <div class="col-sm-6 col-md-4 mb-4">
+            <div class="certificate-card text-center p-3 h-100">
+              <a href="https://example.com/certificate3" target="_blank" rel="noopener noreferrer">
+                <img src="images/certificates/cert3.png" alt="Certificate 3" class="img-fluid mb-3 certificate-img">
+                <h5 class="mb-0">Kubernetes Administrator</h5>
+              </a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
 <section class="project py-5" id="project">
   <div class="container">
     <div class="row">
